--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#fa1b49",
-        "activityBar.background": "#fa1b49",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#155e02",
+        "activityBar.activeBackground": "#e99faa",
+        "activityBar.background": "#e99faa",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#2d821e",
         "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#fa1b49",
-        "statusBar.background": "#dd0531",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#fa1b49",
-        "statusBarItem.remoteBackground": "#dd0531",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#dd0531",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#dd053199",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#e99faa",
+        "statusBar.background": "#df7685",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#d54d60",
+        "statusBarItem.remoteBackground": "#df7685",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#df7685",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#df768599",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#dd0531"
+    "peacock.color": "DF7685"
 }
